Fall back to nearest JRE if no matching major version JRE available
This closes #2045